# llm-databrcks-trainer

./: .gitignore  README.md  databricks.yml  llm_curation_credentials.dbquery.ipynb  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/: 01_ingestion.py  02_cleaning.py  03_chunking.py
src/transforms/: __init__.py  bronze.py  chunking.py  silver.py
test_data/: data_generator.py
tests/: conftest.py  test_bronze_transforms.py  test_chunk_text.py  test_pipeline_files_static.py  test_silver_transforms.py
